# OS

./: .gitignore  .gitmodules
Fibonacci/: CMakeLists.txt
Fibonacci/include/: fibonacci.h
Fibonacci/src/: fibonacci.cpp  main.cpp
Fibonacci/tests/: tests.cpp
lab01/: CMakeLists.txt  employee.h
lab01/include/: employee.h
lab01/src/: creator.cpp  main_thread.cpp  main_winapi.cpp  reporter.cpp
lab01/tests/: test_employee.cpp
lab01/winAPI/: creator.cpp  reporter.cpp
lab01_98/: CMakeLists.txt  creator.cpp  main.cpp  reporter.cpp
lab02/: CMakeLists.txt
lab02/src/: main.cpp  mainThread.cpp  proccessArray.cpp  proccessArray.h  processArray.cpp
lab02/tests/: test_processArray.cpp
lab03/: CMakeLists.txt
lab03/WinAPI/: mainWinAPI.cpp  marker_logic.cpp  marker_logic.h
lab03/src/: mainThread.cpp  mainWinAPI.cpp
lab03/tests/: testThread.cpp  testWinAPI.cpp
lab04/: CMakeLists.txt
lab04/WinApi/: mainWinAPI.cpp  sender.cpp
lab04/tests/: labtest.cpp
lab05/: CMakeLists.txt
lab05/src/: client.cpp  server.cpp  utils.h
lab05/tests/: labtest.cpp
